fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,14 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
-#__next {
-  height: 100vh !important;
-}
+
 * {
   box-sizing: border-box;
 }
